tolk-tester/tests/invalid-syntax/err-3390.tolk
fun main(): int {
    ;; here is not a comment
}

/**
@compilation_should_fail
@stderr error: expected `;`, got `is`
 */
